force-app/main/default/objects/Equipment__c/Equipment__c.object-meta.xml
<CustomObject>
    <description>All equipment on site at a location</description>
    <label>Equipment</label>
    <nameField>
        <label>Equipment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Equipment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>