force-app/main/default/objects/Equipment__c/fields/Bin_Category_Code__c.field-meta.xml
<CustomField>
    <fullName>Bin_Category_Code__c</fullName>
    <formula>Product__r.BinCategoryCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bin Category Code</label>
    <type>Text</type>
</CustomField>