force-app/main/default/objects/Equipment__c/fields/Equipment_Owner__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Owner__c</fullName>
    <label>Equipment Owner</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Mile</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>