force-app/main/default/objects/Equipment__c/fields/Key_Ref_Number__c.field-meta.xml
<CustomField>
    <fullName>Key_Ref_Number__c</fullName>
    <label>Key Ref Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>