force-app/main/default/objects/Equipment__c/fields/Transponder__c.field-meta.xml
<CustomField>
    <fullName>Transponder__c</fullName>
    <externalId>true</externalId>
    <label>Transponder</label>
    <length>20</length>
    <type>Text</type>
</CustomField>