force-app/main/default/objects/Equipment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bin</fullName>
            </value>
            <value>
                <fullName>Key</fullName>
            </value>
            <value>
                <fullName>Compactor</fullName>
            </value>
            <value>
                <fullName>RORO</fullName>
            </value>
            <value>
                <fullName>Baler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>