force-app/main/default/objects/Equipment__c/fields/Waste_Stream__c.field-meta.xml
<CustomField>
    <fullName>Waste_Stream__c</fullName>
    <label>Waste Stream</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Waste</fullName>
            </value>
            <value>
                <fullName>Glass</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>DMR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>