force-app/main/default/objects/Equipment__c/fields/WeekdayRound__c.field-meta.xml
<CustomField>
    <fullName>WeekdayRound__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Weekday Round</label>
    <referenceTo>Round__c</referenceTo>
    <relationshipLabel>Equipment</relationshipLabel>
    <relationshipName>Equipment</relationshipName>
    <type>Lookup</type>
</CustomField>