force-app/main/default/objects/Equipment__c/fields/Weekend_Round__c.field-meta.xml
<CustomField>
    <fullName>Weekend_Round__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Weekend Round</label>
    <referenceTo>Round__c</referenceTo>
    <relationshipLabel>Equipment (Weekend Round)</relationshipLabel>
    <relationshipName>Equipment1</relationshipName>
    <type>Lookup</type>
</CustomField>