force-app/main/default/objects/Equipment__c/recordTypes/Bins.recordType-meta.xml
<RecordType>
    <fullName>Bins</fullName>
    <active>true</active>
    <label>Bins</label>
</RecordType>