force-app/main/default/objects/Equipment__c/recordTypes/Key.recordType-meta.xml
<RecordType>
    <fullName>Key</fullName>
    <active>true</active>
    <label>Key</label>
</RecordType>