force-app/main/default/objects/Equipment__c/listViews/Bins.listView-meta.xml
<ListView>
    <fullName>Bins</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Equipment__c.Bins</value>
    </filters>
    <label>Bins</label>
</ListView>