force-app/main/default/objects/Equipment__c/listViews/Keys.listView-meta.xml
<ListView>
    <fullName>Keys</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Key</value>
    </filters>
    <label>Keys</label>
</ListView>